//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  email String [unique, not null]
  name String
  picture String
  timeZone String
  provider AuthProvider [not null]
  protos Proto [not null]
  integrations Integration [not null]
}

Table Proto {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  title String
  description String
  dateString String
  user User
  userId Int
  integrations IntegrationDataOnProtos [not null]
  deezer DeezerDataOnProtos [not null]
}

Table IntegrationDataOnProtos {
  proto Proto [not null]
  protoId Int [not null]
  integrationData IntegrationData [not null]
  integrationDataId Int [not null]
  assignedAt DateTime [default: `now()`, not null]

  indexes {
    (protoId, integrationDataId) [pk]
  }
}

Table DeezerDataOnProtos {
  proto Proto [not null]
  protoId Int [not null]
  deezerData DeezerData [not null]
  deezerDataId Int [not null]
  assignedAt DateTime [default: `now()`, not null]

  indexes {
    (protoId, deezerDataId) [pk]
  }
}

Table DeezerData {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  externalId String
  search String [not null]
  data String [not null]
  protos DeezerDataOnProtos [not null]
}

Table IntegrationData {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  externalId String
  search String [not null]
  data String [not null]
  protos IntegrationDataOnProtos [not null]
}

Table Integration {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  provider IntegrationProvider
  status IntegrationStatus
  refreshToken String
  user User
  userId Int
}

Enum AuthProvider {
  GOOGLE
  APPLE
}

Enum IntegrationProvider {
  SPOTIFY
  DEEZER
  YOUTUBE
}

Enum IntegrationStatus {
  CONNECTED
  DISCONNECTED
}

Ref: Proto.userId > User.id [delete: Set Null]

Ref: IntegrationDataOnProtos.protoId > Proto.id

Ref: IntegrationDataOnProtos.integrationDataId > IntegrationData.id

Ref: DeezerDataOnProtos.protoId > Proto.id

Ref: DeezerDataOnProtos.deezerDataId > DeezerData.id

Ref: Integration.userId > User.id [delete: Set Null]